@@ -328,4 +328,19 @@
 		<mute-pokey>N/A</mute-pokey>
 		<lang>C, C++</lang>
 	</port>
+	<port name="asapplay (C#)">
+		<bin></bin>
+		<platform>desktop operating systems</platform>
+		<interface>command line</interface>
+		<since>2.1.1</since>
+		<status>stable</status>
+		<output>16-bit sound</output>
+		<subsongs>yes</subsongs>
+		<file-info>no</file-info>
+		<edit-info>no</edit-info>
+		<convert-sap>no</convert-sap>
+		<config-time>yes</config-time>
+		<mute-pokey>no</mute-pokey>
+		<lang>C#</lang>
+	</port>
 </ports>
