@@ -1,3 +1,8 @@
+2010-03-30  Piotr Fusik  <fox@scene.pl>
+* csharp/asapplay.cs, csharp/Makefile, INSTALL, README, PORTS.xml:
+  simple command-line player in C#
+
+
 2010-03-16  Piotr Fusik  <fox@scene.pl>
 * acpu.c, apokeysnd.c, asap.c, asap.h, asap_internal.h, asapscan.c, chksap.pl,
   csharp/ASAP.ppcs, flash/ASAP_ModuleInfo.as, java/ASAP_ModuleInfo.java:
